--- a/helm/backend/Chart.yaml
+++ b/helm/backend/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
 name: backend
-description: Helm chart for backend application
 version: 0.1.0
-appVersion: "1.0.0"
+description: Helm chart for backend deployment
