--- a/helm/backend/templates/deployment.yaml
+++ b/helm/backend/templates/deployment.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "backend.fullname" . }}
+  labels:
+    app: {{ include "backend.name" . }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: {{ include "backend.name" . }}
@@ -14,17 +16,33 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
-            - containerPort: 80
+            - containerPort: 8000
           env:
-            - name: POSTGRES_HOST
-              value: "{{ .Values.env.POSTGRES_HOST }}"
-            - name: POSTGRES_PORT
-              value: "{{ .Values.env.POSTGRES_PORT }}"
-            - name: POSTGRES_DB
-              value: "{{ .Values.env.POSTGRES_DB }}"
-            - name: POSTGRES_USER
-              value: "{{ .Values.env.POSTGRES_USER }}"
-            - name: POSTGRES_PASSWORD
-              value: "{{ .Values.env.POSTGRES_PASSWORD }}"
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: DB_HOST
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: DB_USER
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secrets
+                  key: DB_PASSWORD
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: "/mnt/secrets"
+              readOnly: true
+      volumes:
+        - name: secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: azure-keyvault-backend
