--- a/helm/frontend/Chart.yaml
+++ b/helm/frontend/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
 name: frontend
-description: Helm chart for frontend application
 version: 0.1.0
-appVersion: "1.0.0"
+description: Helm chart for frontend deployment
