--- a/helm/frontend/values.yaml
+++ b/helm/frontend/values.yaml
@@ -1,14 +1,4 @@
-replicaCount: 1
-
 image:
-  repository: ghcr.io/your-org/frontend
+  repository: ghcr.io/devops-iot3/frontend
   tag: latest
-  pullPolicy: IfNotPresent
-
-service:
-  type: ClusterIP
-  port: 80
-
-env:
-  - name: REACT_APP_API_URL
-    value: "http://backend:8000"
+apiUrl: http://backend
