--- a/helm/backend/templates/deployment.yaml
+++ b/helm/backend/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "backend.name" . }}
+  name: {{ .Chart.Name }}
   labels:
-    app: {{ include "backend.name" . }}
+    app: {{ .Chart.Name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ include "backend.name" . }}
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
-        app: {{ include "backend.name" . }}
+        app: {{ .Chart.Name }}
     spec:
       containers:
         - name: backend
