--- a/helm/frontend/templates/service.yaml
+++ b/helm/frontend/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "frontend.name" . }}
+  name: {{ .Chart.Name }}
 spec:
   selector:
-    app: {{ include "frontend.name" . }}
+    app: {{ .Chart.Name }}
   ports:
     - protocol: TCP
       port: 80
