--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Secrets Store CSI Driver
         run: |
           kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/secrets-store-csi-driver/v1.4.0/deploy/secrets-store-csi-driver.yaml
-          kubectl apply -f https://raw.githubusercontent.com/Azure/secrets-store-csi-driver-provider-azure/main/deploy/provider-azure-installer.yaml
+          kubectl apply -f https://raw.githubusercontent.com/Azure/secrets-store-csi-driver-provider-azure/v1.4.0/deploy/provider-azure-installer.yaml
 
       - name: Helm upgrade backend
         run: |
