--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets-store.csi.k8s.io/v1alpha1
+apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-keyvault-backend
@@ -7,15 +7,15 @@ spec:
   parameters:
     usePodIdentity: "false"
     keyvaultName: {{ .Values.keyvaultName }}
+    tenantId: {{ .Values.tenantId }}
     objects: |
       array:
-        - | 
+        - |
           objectName: DB_HOST
           objectType: secret
-        - | 
+        - |
           objectName: DB_USER
           objectType: secret
-        - | 
+        - |
           objectName: DB_PASSWORD
           objectType: secret
-    tenantId: {{ .Values.tenantId }}
