--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -68,15 +68,13 @@ jobs:
       - name: Helm upgrade backend
         run: |
           helm upgrade --install backend ./helm/backend \
-            --set imagePullSecrets[0].name=ghcr \
             --set keyvaultName=kv-devops-cicd-${{ env.ENVIRONMENT }} \
             --set tenantId=$(az account show --query tenantId -o tsv) \
-            --namespace $NAMESPACE --wait
+            --namespace $NAMESPACE
 
       - name: Helm upgrade frontend
         run: |
           helm upgrade --install frontend ./helm/frontend \
-            --set imagePullSecrets[0].name=ghcr \
             --set keyvaultName=kv-devops-cicd-${{ env.ENVIRONMENT }} \
             --set tenantId=$(az account show --query tenantId -o tsv) \
-            --namespace $NAMESPACE --wait
+            --namespace $NAMESPACE
