--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets-store.csi.x-k8s.io/v1
+apiVersion: secrets-store.csi.k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-keyvault-backend
@@ -6,16 +6,15 @@ spec:
   provider: azure
   parameters:
     usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: {{ .Values.clientId }}
     keyvaultName: {{ .Values.keyvaultName }}
     tenantId: {{ .Values.tenantId }}
     objects: |
       array:
-        - |
-          objectName: DB_HOST
+        - objectName: DB_HOST
           objectType: secret
-        - |
-          objectName: DB_USER
+        - objectName: DB_USER
           objectType: secret
-        - |
-          objectName: DB_PASSWORD
+        - objectName: DB_PASSWORD
           objectType: secret
