--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -69,12 +69,11 @@ jobs:
         run: |
           helm upgrade --install backend ./helm/backend \
             --set keyvaultName=kv-devops-cicd-${{ env.ENVIRONMENT }} \
-            --set tenantId=$(az account show --query tenantId -o tsv) \
+            --set tenantId=$secret.ARM_TENANT_ID \
+            --set clientId=$secret.ARM_CLIENT_ID \
             --namespace $NAMESPACE
 
       - name: Helm upgrade frontend
         run: |
           helm upgrade --install frontend ./helm/frontend \
-            --set keyvaultName=kv-devops-cicd-${{ env.ENVIRONMENT }} \
-            --set tenantId=$(az account show --query tenantId -o tsv) \
             --namespace $NAMESPACE
