--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets-store.csi.k8s.io/v1
+apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-keyvault-backend
@@ -16,5 +16,5 @@ spec:
           objectType: secret
         - objectName: DB_USER
           objectType: secret
-        - objectName: DB_PASSWORD
+        - objectName: postgresql-admin-password
           objectType: secret
