--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -12,9 +12,6 @@ spec:
     tenantId: {{ .Values.tenantId }}
     objects: |
       array:
-        - objectName: DB_HOST
-          objectType: secret
-        - objectName: DB_USER
-          objectType: secret
-        - objectName: postgresql-admin-password
+        - |
+          objectName: postgresql-admin-password
           objectType: secret
