--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -11,7 +11,5 @@ spec:
     keyvaultName: {{ .Values.keyvaultName }}
     tenantId: {{ .Values.tenantId }}
     objects: |
-      array:
-        - |
-          objectName: postgresql-admin-password
-          objectType: secret
+      - objectName: "postgresql-admin-password"
+        objectType: "secret"
