--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -11,5 +11,8 @@ spec:
     keyvaultName: {{ .Values.keyvaultName }}
     tenantId: {{ .Values.tenantId }}
     objects: |
-      - objectName: "postgresql-admin-password"
-        objectType: "secret"
+      array:
+        - |
+          objectName: postgresql-admin-password
+          objectType: secret
+          objectVersion: ""
