--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -12,7 +12,6 @@ spec:
     tenantId: {{ .Values.tenantId }}
     objects: |
       array:
-        - |
-          objectName: postgresql-admin-password
+        - objectName: postgresql-admin-password
           objectType: secret
           objectVersion: ""
