--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   provider: azure
   parameters:
-    usePodIdentity: "false"
-    useVMManagedIdentity: "true"
+    usePodIdentity:        "false"
+    useVMManagedIdentity:  "true"
     userAssignedIdentityID: {{ .Values.clientId }}
     keyvaultName: {{ .Values.keyvaultName }}
     tenantId: {{ .Values.tenantId }}
     objects: |
-      - objectName: postgresql-admin-password
-        objectType: secret
+      - objectName: "postgresql-admin-password"
+        objectType: "secret"
         objectVersion: ""
