--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -60,6 +60,19 @@ jobs:
             --set enableSecretRotation=true \
             --wait
 
+      - name: Install Azure Key Vault Provider
+        run: |
+          # Install the Azure Key Vault provider
+          helm repo add csi-secrets-store-provider-azure https://azure.github.io/secrets-store-csi-driver-provider-azure/charts
+          helm repo update
+          helm upgrade --install azure-keyvault-provider csi-secrets-store-provider-azure/csi-secrets-store-provider-azure \
+            --namespace kube-system \
+            --wait
+          
+          # Wait for the provider to be ready
+          echo "Waiting for the Azure provider pods to be ready..."
+          kubectl -n kube-system wait --for=condition=ready pod -l app=csi-secrets-store-provider-azure --timeout=60s
+
       - name: Wait for SecretProviderClass CRD to be ready
         run: |
           echo "Waiting for CRD secretproviderclasses.secrets-store.csi.x-k8s.io..."
@@ -73,12 +86,21 @@ jobs:
             --set clientId=${{ secrets.ARM_CLIENT_ID }} \
             --namespace $NAMESPACE
 
-      - name: Verify SecretProviderClass is available
+      
+      - name: Debug CSI setup
         run: |
-          echo "Waiting for SecretProviderClass to be available..."
-          kubectl wait --for=condition=established --timeout=60s secretproviderclass/azure-keyvault-backend -n $NAMESPACE
-
+          echo "Checking CSI driver pods..."
+          kubectl get pods -n kube-system -l app=secrets-store-csi-driver
+          
+          echo "Checking Azure provider pods..."
+          kubectl get pods -n kube-system -l app=csi-secrets-store-provider-azure
+          
+          echo "Checking SecretProviderClass..."
+          kubectl get secretproviderclass -n $NAMESPACE
+          kubectl describe secretproviderclass azure-keyvault-backend -n $NAMESPACE
+          
       - name: Helm upgrade frontend
         run: |
           helm upgrade --install frontend ./helm/frontend \
             --namespace $NAMESPACE
+
