--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -1,16 +1,26 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: azure-keyvault-backend
+  name: azure-keyvault-backend         # libre à toi de le renommer
+  namespace: devops-cicd               # <-- ajoute le namespace si besoin
 spec:
   provider: azure
   parameters:
-    usePodIdentity:        "false"
-    useVMManagedIdentity:  "true"
+    # --- Authentification / contexte ---
+    usePodIdentity:       "false"
+    useVMManagedIdentity: "true"
+    cloudName:            ""
     userAssignedIdentityID: {{ .Values.clientId }}
+    tenantId:               {{ .Values.tenantId }}
+
+    # --- Key Vault cible ---
     keyvaultName: {{ .Values.keyvaultName }}
-    tenantId: {{ .Values.tenantId }}
+
+    # --- Objets à monter ---
+    # NOTE : le bloc ci‑dessous est une chaîne YAML (`|`) et **non** un tableau direct.
     objects: |
-      - objectName: "postgresql-admin-password"
-        objectType: "secret"
-        objectVersion: ""
+      array:
+        - |
+          objectName: "postgresql-admin-password"
+          objectType: secret
+          objectVersion: ""
