--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -1,23 +1,17 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: azure-keyvault-backend         # libre à toi de le renommer
-  namespace: devops-cicd               # <-- ajoute le namespace si besoin
+  name: azure-keyvault-backend
+  namespace: devops-cicd
 spec:
   provider: azure
   parameters:
-    # --- Authentification / contexte ---
-    usePodIdentity:       "false"
-    useVMManagedIdentity: "true"
-    cloudName:            ""
+    usePodIdentity:        "false"
+    useVMManagedIdentity:  "true"
+    cloudName:             ""
     userAssignedIdentityID: {{ .Values.clientId }}
-    tenantId:               {{ .Values.tenantId }}
-
-    # --- Key Vault cible ---
-    keyvaultName: {{ .Values.keyvaultName }}
-
-    # --- Objets à monter ---
-    # NOTE : le bloc ci‑dessous est une chaîne YAML (`|`) et **non** un tableau direct.
+    tenantId:              {{ .Values.tenantId }}
+    keyvaultName:          {{ .Values.keyvaultName }}
     objects: |
       array:
         - |
