--- a/helm/backend/templates/secretproviderclass.yaml
+++ b/helm/backend/templates/secretproviderclass.yaml
@@ -9,7 +9,7 @@ spec:
     usePodIdentity:        "false"
     useVMManagedIdentity:  "true"
     cloudName:             ""
-    userAssignedIdentityID: {{ .Values.clientId }}
+    userAssignedIdentityID: ""
     tenantId:              {{ .Values.tenantId }}
     keyvaultName:          {{ .Values.keyvaultName }}
     objects: |
