--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -23,87 +23,86 @@ jobs:
       TF_VAR_github_username: ${{ secrets.TF_VAR_GITHUB_USERNAME }}
       TF_VAR_github_token: ${{ secrets.TF_VAR_GITHUB_TOKEN }}
 
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-    # ────────── Git / AKS context ──────────
-    - name: Checkout
-      uses: actions/checkout@v4
+      # ────────── Git / AKS context ──────────
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Azure CLI login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Azure CLI login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set AKS context
-      run: |
-        az aks get-credentials \
-          --resource-group rg-devops-cicd-${{ env.ENVIRONMENT }} \
-          --name          aks-devops-cicd-${{ env.ENVIRONMENT }}
+      - name: Set AKS context
+        run: |
+          az aks get-credentials \
+            --resource-group rg-devops-cicd-${{ env.ENVIRONMENT }} \
+            --name          aks-devops-cicd-${{ env.ENVIRONMENT }}
 
-    # ────────── Namespace & image‑pull secret ──────────
-    - name: Prepare namespace
-      run: |
-        kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
-        kubectl create secret docker-registry ghcr \
-          --docker-server=ghcr.io \
-          --docker-username=${{ secrets.TF_VAR_GITHUB_USERNAME }} \
-          --docker-password=${{ secrets.TF_VAR_GITHUB_TOKEN }} \
-          --namespace $NAMESPACE \
-          --dry-run=client -o yaml | kubectl apply -f -
+      # ────────── Namespace & image‑pull secret ──────────
+      - name: Prepare namespace
+        run: |
+          kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret docker-registry ghcr \
+            --docker-server=ghcr.io \
+            --docker-username=${{ secrets.TF_VAR_GITHUB_USERNAME }} \
+            --docker-password=${{ secrets.TF_VAR_GITHUB_TOKEN }} \
+            --namespace $NAMESPACE \
+            --dry-run=client -o yaml | kubectl apply -f -
 
-    # ────────── Vérifier l’add‑on AKS ──────────
-    - name: Detect AKS KeyVault add‑on
-      id: addon
-      run: |
-        flag=$(az aks show \
-          --resource-group rg-devops-cicd-${{ env.ENVIRONMENT }} \
-          --name          aks-devops-cicd-${{ env.ENVIRONMENT }} \
-          --query "addonProfiles.azureKeyvaultSecretsProvider.enabled" -o tsv 2>/dev/null || echo "false")
-        echo "addonEnabled=$flag" >> "$GITHUB_OUTPUT"
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: 'v3.12.0'
 
-    # ────────── Nettoyage des anciens charts ──────────
-    - name: Uninstall legacy Helm releases
-      if: steps.addon.outputs.addonEnabled == 'false'
-      run: |
-        helm uninstall azure-keyvault-provider -n kube-system || true
-        helm uninstall csi-secrets-store   -n kube-system || true
-        # Attendre la suppression effective des DaemonSets/Pods
-        kubectl delete daemonset -n kube-system -l app=csi-secrets-store-provider-azure --ignore-not-found
-        kubectl delete daemonset -n kube-system -l app=secrets-store-csi-driver       --ignore-not-found
-        kubectl wait --for=delete pod -n kube-system -l app=csi-secrets-store-provider-azure --timeout=120s || true
+      - name: Install NGINX Ingress Controller
+        run: |
+          chmod +x ./deployment/helm/install_nginx_controller.sh
+          ./deployment/helm/install_nginx_controller.sh
 
-    # ────────── Installation du chart seulement si nécessaire ──────────
-    - name: Install Azure Key Vault provider (Helm)
-      if: steps.addon.outputs.addonEnabled == 'false'
-      run: |
-        helm repo add csi-secrets-store-provider-azure \
-          https://azure.github.io/secrets-store-csi-driver-provider-azure/charts
-        helm repo update
-        helm upgrade --install azure-keyvault-provider \
-          csi-secrets-store-provider-azure/csi-secrets-store-provider-azure \
-          --namespace kube-system \
-          --set secrets-store-csi-driver.syncSecret.enabled=true \
-          --set secrets-store-csi-driver.enableSecretRotation=true \
-          --set metricsAddr="8899" \ 
-          --wait
+      - name: Install Key Vault Provider
+        run: |
+          chmod +x ./deployment/helm/install_keyvault_provider.sh
+          ./deployment/helm/install_keyvault_provider.sh
 
-    # ────────── Attente des pods (sécurisée) ──────────
-    - name: Wait for provider pods (if chart was installed)
-      if: steps.addon.outputs.addonEnabled == 'false'
-      run: |
-        echo "Waiting up to 5 min for provider pods…"
-        kubectl -n kube-system wait --for=condition=ready pod \
-          -l app=csi-secrets-store-provider-azure \
-          --timeout=300s
+      - name: Configure Key Vault Integration
+        run: |
+          KEY_VAULT_NAME=$(az keyvault list -g rg-devops-cicd-${{ github.event.inputs.environment }} --query "[0].name" -o tsv)
+          TENANT_ID=$(az account show --query tenantId -o tsv)
+          
+          # Update Secret Provider Class with actual values
+          sed -i "s/\${KEY_VAULT_NAME}/$KEY_VAULT_NAME/g" ./deployment/helm/backend/templates/secret-provider.yaml
+          sed -i "s/\${TENANT_ID}/$TENANT_ID/g" ./deployment/helm/backend/templates/secret-provider.yaml
 
-    # ────────── Vos charts applicatifs ──────────
-    - name: Helm upgrade backend
-      run: |
-        helm upgrade --install backend ./helm/backend \
-          --set keyvaultName=kv-devops-cicd-${{ env.ENVIRONMENT }} \
-          --set tenantId=${{ env.ARM_TENANT_ID }} \
-          --set clientId=${{ env.ARM_CLIENT_ID }} \
-          --namespace $NAMESPACE
+      - name: Deploy Backend
+        run: |
+          helm upgrade --install backend ./deployment/helm/backend \
+            --namespace ${{ env.NAMESPACE }} \
+            --set postgresql.host=${{ secrets.DB_HOST }} \
+            --set postgresql.port=${{ secrets.DB_PORT }} \
+            --set postgresql.database=${{ secrets.DB_NAME }}
 
-    - name: Helm upgrade frontend
-      run: |
-        helm upgrade --install frontend ./helm/frontend --namespace $NAMESPACE
+      - name: Deploy Frontend
+        run: |
+          helm upgrade --install frontend ./deployment/helm/frontend 
+
+      - name: Deploy Ingress
+        run: |
+          helm upgrade --install ingress ./deployment/helm/ingress \
+            --namespace ${{ env.NAMESPACE }}
+
+      - name: Verify deployments
+        run: |
+          echo "Waiting for deployments to be ready..."
+          kubectl wait --for=condition=available --timeout=300s deployment/backend -n ${{ env.NAMESPACE }}
+          kubectl wait --for=condition=available --timeout=300s deployment/frontend -n ${{ env.NAMESPACE }}
+          
+          echo "Getting service URLs..."
+          BACKEND_IP=$(kubectl get svc -n ${{ env.NAMESPACE }} backend -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          FRONTEND_IP=$(kubectl get svc -n ${{ env.NAMESPACE }} frontend -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          
+          echo "Backend service available at: http://$BACKEND_IP"
+          echo "Frontend service available at: http://$FRONTEND_IP"
