--- a/helm/ingress/templates/front-ingress.yaml
+++ b/helm/ingress/templates/front-ingress.yaml
@@ -3,26 +3,25 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-
   name: redirect-front-ingress
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
           - path: /api(/|$)(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: backend
                 port:
                   number: 80
           - path: /(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: frontend
